--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lyrics Search</title>
     <script src="https://www.youtube.com/iframe_api"></script>
+    <link rel="icon" type="image/png" href="../static/images/candy.png">
     <link rel="stylesheet" href="../static/style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
